2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘lockflag’ from global state of rlog(1).

	* rlog.c (lockflag): Delete var.
	(extractdelta): Add 2nd arg ‘lockflag’.
	(exttree): Likewise; update call to ‘extractdelta’, self.
	(main): Add auto var ‘lockflag’; update call to ‘exttree’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘branchflag’ from global state of rlog(1).

	* rlog.c (branchflag): Delete var.
	(getnumericrev): Take arg BRANCHFLAG.
	(main): Add auto var ‘branchflag’; update call to ‘getnumericrev’.

2011-10-13  Ian Delaney  <della5@iinet.com.au>  (tiny change)

	Fix bug: Make sure rcsgen.c sees ‘makedirtemp’ decl.

	* rcsgen.c: #include "b-feph.h".

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘workptr’, ‘workstat’ from global state of rcsdiff(1).

	* rcsdiff.c (workptr, workstat): Delete vars.
	(struct work): New.
	(cleanup): Take 2nd arg WORK; use ‘work->fro’.
	(main): Add auto var ‘work’; update calls
	to ‘cleanup’; use ‘work.fro’ and ‘work.st’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘workptr’ from global state of rcsclean(1).

	* rcsclean.c (workptr): Delete var.
	(cleanup): Take 2nd arg WORKPTR.
	(main): Add auto var ‘workptr’; update calls to ‘cleanup’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘getcurdate_buffer’ from global state of ci(1).

	* ci.c (struct bud): Add member ‘getcurdate_buffer’.
	(getcurdate_buffer): Delete var.
	(getcurdate): Take BUD; use ‘bud->getcurdate_buffer’.
	(getlogmsg): Drop ‘const’ from arg ‘bud’; update call to ‘getcurdate’.
	(main): Update call to ‘getcurdate’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘logmsg’ from global state of ci(1).

	* ci.c (struct reason): New.
	(logmsg): Delete var.
	(getlogmsg): Dno't take MSG; take REASON; use ‘reason->delayed’.
	(main): Delete auto var ‘msg’; add auto var ‘reason’;
	use ‘reason.upfront’; update calls to ‘getlogmsg’.
