@@ -1,5 +1,16 @@
 2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Remove ‘datelist’, ‘duelst’ from global state of rlog(1).
+
+	* rlog.c (struct date_selection): New.
+	(datelist, duelst): Delete vars.
+	(extdate, getdatepair): Take 2nd arg ‘datesel’;
+	use ‘datesel->in’, ‘datesel->by’.
+	(main): Add auto var ‘datesel’; update call to ‘getdatepair’;
+	use ‘datsel.by’; update call to ‘extdate’.
+
+2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Remove ‘lockflag’ from global state of rlog(1).
 
 	* rlog.c (lockflag): Delete var.
